2005-06-03 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc: Added a call to g_main_iteration() to allow GTK
	events to get processed. (This replaces the GTKWAIT macro that was
	removed in the previous commit).

2005-06-02 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc, gui/gui_main.cc: Removed GTKWAIT
	macros. Apparently on newer versions of GTK these macros block
	indefinitely. On really old versions of GTK (pre 2.0) these macros
	were necessary.

2005-05-26 J.R. Heisey <jrheisey@sourceforge.com>
	* src/breakpoints.cc,h, plat/win32/gpsim.def: added
	register assertions functionality. Can now assert the
	register value with !=, <=, >=, <, and > operators.

2005-06-01 Scott Dattalo <scott@dattalo.com>
	* src/os_dependent.cc: Printed an error message if
	a shared library fails to open.

2005-05-26 J.R. Heisey <jrheisey@sourceforge.com>
	* src/program_files.cc: Fixed crashing bug when no file
	types are able to open a program file.

2005-05-25 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi, extras/lcd/makefile.mingw:
	added missing files to the WIN32 installation package in
	order to be able to compile the LCD modue; make LCD module
	mingw makefile a litle bit more flexible

2005-05-24 Scott Dattalo <scott@dattalo.com>
	* src/cod.cc, src/breakpoints.cc, src/trigger.cc,
	regression/assertions/assertions.asm: Added support
	for scripts embedded in .cod files.

2005-05-24 Scott Dattalo <scott@dattalo.com>
	* src/modules.h, src/modules.cc, src/processor.cc,
	src/breakpoints.cc, src/pic-processor.cc, src/hexutils.cc,
	gui/gui_src.cc, gui/gui_src_asm.cc, cli/scan.ll,
	src/cmd_manager.h, cli/cmd_dump.cc:
	
	-- renamed the enum's for the SIMULATION_MODE(s) (the
	enum 'INITIAL' collides with a macro in flex)
	-- added support for module scripts
	-- If a symbol begins with a period, then the scanner
	will automatically prepend the active processor name.
	(This is a short cut for accessing processor attributes).
