@@ -1,3 +1,10 @@
+2005-06-04 Scott Dattalo <scott@dattalo.com>
+	Patch from: Rob Pearce <rob@bdt-home.demon.co.uk>
+	* src/cod.cc: Fixed gramatical error.
+	* src/eeprom.cc, src/eeprom.h: Added a new state to the eeprom
+	state machine to fix ??
+	* src/ioports.cc: fix to the 628 porta comparator.
+	
 2005-06-03 Scott Dattalo <scott@dattalo.com>
 	* gui/gui_main.cc: Added a call to g_main_iteration() to allow GTK
 	events to get processed. (This replaces the GTKWAIT macro that was
